Moved the form to add the link or bin to the top and fixed the footer wrapping

--- a/public/_/stylesheets/main.css
+++ b/public/_/stylesheets/main.css
@@ -7999,7 +7999,6 @@ body {
   position: relative;
 }
 #body {
-  padding: 10px;
   padding-bottom: 80px;
 }
 #footer {
