--- a/views/_/stylesheets/footer.less
+++ b/views/_/stylesheets/footer.less
@@ -9,7 +9,6 @@ body {
   position:relative;
 }
 #body {
-  padding:10px;
   padding-bottom:80px;  
 }
 #footer {
